<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">壹零天气</string>
    <string name="title_city">北京天气</string>
    <string name="action_settings">Settings</string>
    <string name="city">北京</string>
    <string name="publish_time">今日18:25发布</string>
    <string name="humidity">湿度:57%</string>
    <string name="PM_25">PM2.5</string>
    <string name="PM_25_value">100</string>
    <string name="pollution">重度污染</string>
    <string name="today">今日 星期三</string>
    <string name="temperature">-2℃~7℃</string>
    <string name="whether">多云转晴</string>
    <string name="wind_force">微风</string>
    <string name="title_activity_select_city">选择城市</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_guide">Guide</string>
    <string name="title_activity_start_page">天气预报</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_city_list">CityList</string>
    <string name="title_activity_my_alarm">MyAlarm</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_lock_screen">LockScreen</string>

</resources>
